data/Java/18-missing-return-value/5/[M]Error.txt
*https://www.geeksforgeeks.org/methods-in-java/
Main.java:15: error: incompatible types: missing return value
        return;
        ^